# api/openapi.yaml
@@ -39,7 +39,7 @@ paths:
                   value:
                     message: ok
 
-  /auth/start:
+  /api/v1/auth/start:
     post:
       tags: [Auth]
       summary: Запустить авторизацию и отправить OTP на email
@@ -104,7 +104,7 @@ paths:
                   value:
                     error: 'send mail failed: internal error'
 
-  /auth/verify:
+  /api/v1/auth/verify:
     post:
       tags: [Auth]
       summary: Проверить OTP и получить JWT
@@ -176,7 +176,7 @@ paths:
                   value:
                     error: 'internal error: internal error'
 
-  /auth/check:
+  /api/v1/auth/check:
     get:
       tags: [Auth]
       summary: Проверить Bearer-токен
@@ -274,7 +274,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /auth/logout:
+  /api/v1/auth/logout:
     post:
       tags: [Auth]
       summary: Выйти из системы
